--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0777ce897e.js" crossorigin="anonymous"></script>
-    <title>Fullstack eCommerce</title>
+    <title>Genie - Online eCommerce</title>
   </head>
   <body>
     <div id="root"></div>
